fix align

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -10,6 +10,7 @@ $color-medium: #333333;
 body{
     background-color: #FDFDFD;
     color: #222222;
+    text-align: start;
 }
 #main{
     padding-top: 13vh;
